# orakle_amm

./: .env.example  .gitignore  README.md  analysis_v2.py  analysis_v3.py  ape-config.yaml  data_processor.py  error_analysis_performer.py  format_blocks.py  format_cex_price.py  generate_data.ipynb  perform_analysis.py  perform_error_analysis.py  perform_pnl_analysis.py  pnl_analysis_performer.py  price_formatter.py  process_v2_data.py  process_v2_data_new.py  process_v2_data_temp.ipynb  process_v3_data.py  process_v3_data_temp.ipynb  pyproject.toml  query_v2_events.py  query_v2_events_new.py  query_v3_events.py  query_v3_events_new.py  reproduce_MMRZ.ipynb  simul_demo.ipynb  utils.py  v2_data_processor.py  v3_data_processor.py  v3_events_getter.py
contracts/: new_amm.vy
contracts/snekmate-0.0.4.dist-info/: METADATA  RECORD  top_level.txt
data/MAINNET_blocks/: ethereum__blocks__18255965_to_18256964.parquet  ethereum__blocks__18256965_to_18257964.parquet  ethereum__blocks__18258965_to_18259964.parquet  ethereum__blocks__18259965_to_18260964.parquet  ethereum__blocks__18260965_to_18261964.parquet  ethereum__blocks__18261965_to_18262964.parquet  ethereum__blocks__18264965_to_18265964.parquet  ethereum__blocks__18265965_to_18266964.parquet  ethereum__blocks__18271965_to_18272964.parquet  ethereum__blocks__18272965_to_18273964.parquet  ethereum__blocks__18274965_to_18275964.parquet  ethereum__blocks__18278965_to_18279964.parquet  ethereum__blocks__18282965_to_18283964.parquet  (+202 more)
notebooks/: generate_data.ipynb  reproduce_MMRZ.ipynb
(+284 files in other folders)
